RESOLVED FIXED154391
Fix the !ENABLE(DFG_JIT) build after r195865
https://bugs.webkit.org/show_bug.cgi?id=154391
Summary Fix the !ENABLE(DFG_JIT) build after r195865
Csaba Osztrogonác
Reported 2016-02-18 04:00:24 PST
http://trac.webkit.org/changeset/195865 broke the !DFG build: ../../Source/JavaScriptCore/runtime/SamplingProfiler.cpp: In function 'unsigned int JSC::tryGetBytecodeIndex(unsigned int, JSC::CodeBlock*, bool&)': ../../Source/JavaScriptCore/runtime/SamplingProfiler.cpp:299:48: error: 'class JSC::CodeBlock' has no member named 'hasCodeOrigins' hasCodeOrigins is defined inside ENABLE(DFG_JIT) guard, it shouldn't be used unconditionally.
Attachments
Patch (1.33 KB, patch)
2016-02-18 04:01 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-02-18 04:01:24 PST
WebKit Commit Bot
Comment 2 2016-02-18 08:45:24 PST
Comment on attachment 271649 [details] Patch Clearing flags on attachment: 271649 Committed r196757: <http://trac.webkit.org/changeset/196757>
WebKit Commit Bot
Comment 3 2016-02-18 08:45:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.