Fix the !ENABLE(DFG_JIT) build after r195865 https://bugs.webkit.org/show_bug.cgi?id=154391

Reviewed by Filip Pizlo.

* runtime/SamplingProfiler.cpp:
(JSC::tryGetBytecodeIndex):


Canonical link: https://commits.webkit.org/172511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196757 268f45cc-cd09-0410-ab3c-d52691b4dbfc